--- a/src/app/pages/MMS/homePage/home_page.html
+++ b/src/app/pages/MMS/homePage/home_page.html
@@ -5,7 +5,7 @@
       <div class="col-md-6 col-sm-6" style="padding: 3rem">
         <center>
           <a class="card1" ng-click="vm.goToUrl('teacher')">
-            <img src="../../../../assets/images/teacher.png" height="200px" />
+            <img src="assets/images/teacher.png" height="200px" />
             <h1 class="text-center">Teacher Login</h1>
             <!-- <p class="small">Card description with lots of great facts and interesting details.</p> -->
             <br />
@@ -19,7 +19,7 @@
       <div class="col-md-6 col-sm-6" style="padding: 3rem">
         <center>
           <a class="card1" ng-click="vm.goToUrl('student')">
-            <img src="../../../../assets/images/student.png" height="220px" />
+            <img src="assets/images/student.png" height="220px" />
             <h1>Student Login</h1>
             <!-- <p class="small">Card description with lots of great facts and interesting details.</p> -->
             <br />
