--- a/src/app/components/partials/header/header.html
+++ b/src/app/components/partials/header/header.html
@@ -13,10 +13,10 @@
         <span class="sr-only">Toggle header</span>
         <i class="fa fa-cog"></i>
     </button>
-    <button type="button" class="navigation-toggle" id="navigation-toggle">
+    <!-- <button type="button" class="navigation-toggle" id="navigation-toggle">
         <span class="sr-only">Toggle navigation</span>
         <i class="fa fa-bars"></i>
-    </button>
+    </button> -->
     <!-- <a class="navbar-brand" ui-sref="dashboard">
         <span><img src="assets/images/logo.png" height="45px" style="margin-bottom: 10px" /></span>
     </a> -->
